[master branch]
    - Text-based citations can now be imported using FreeCite by Brown University
      (http://freecite.library.brown.edu). By Kai Mindermann and Daniel Maurer.
    - JabRef supports synchronization of unlinked PDFs. Feature request "[2163626] Scan database - find unlinked files".
      Based on patch 3122104. 
    - Added command line argument -d/-prdef for resetting preferences to default values. Can
      reset a comma-separated list of preference values, or all values.
    - Added small popup menu at each tab
    - A PDF can also be dropped to the preview panel to trigger linking it
    - Braces around author names are now dropped internally. They remain in the .bib though
      Effects (incomplete list): Authors in the main window are shown without braces,
      autocompletion does not show these braces
    - Autocompletion: ";" is now also a delimiter allowing "keyword1; keyword2" in the keyword fields
    - Autocompletion: the amount of characters to trigger autocompletion may now be configured
      (default is 2)
    - Autocompletion: in case lower case letters are used, the search is case-insenstive,
      otherwise the search is case sensitive.
    - Autocompletion: new preference to choose how to deal with first names 
      (always full/always abbreviated/both full and abbreviated)
    - Added functionality "clean up entries" 
      - Includes clean up DOI functionality by Florian Straßer and Marius Kleiner
        (move of DOIs from ee, note, and url field is supported)
      - Option to rename PDF of entry according to configured PDF-naming-scheme
        (by Florian Straßer and Marius Kleiner)
      - clean up month (functionality based on patch 3470076 by Mathias Walter)
      - clean up pages
      - make file paths relative      
    - Added support for drag'n'drop of tabs by Florian Straßer and Marius Kleiner.
2.8.1
    - New DBLP fetcher. Patch 3462232 by Sascha Hunold.