@@ -80,3 +80,4 @@ dbImport=database_save.png
 plugin=kwikdisk.png
 cleanupentries=cleanupentries.png
 dragNdropArrow=dragNdropArrow.png
+texstudio=texstudio.png
